# Iridia_camera_project_ros_package

./: .gitignore  LICENSE  README.md  TODO.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: camera_publisher.pc  my_robot_controller.pc  up_pointing_camera.pc
devel/share/camera_publisher/cmake/: camera_publisherConfig.cmake
devel/share/my_robot_controller/cmake/: my_robot_controllerConfig.cmake
devel/share/up_pointing_camera/cmake/: up_pointing_cameraConfig.cmake
src/my_robot_controller/: package.xml
src/my_robot_controller/scipts/: my_first_node.py
src/up_pointing_camera/: CMakeLists.txt  package.xml
src/up_pointing_camera/launch/: camera.launch
src/up_pointing_camera/src/: Camera_listener.py  Camera_publisher.py
