<?xml version="1.0"?>
<package format="2">
  <name>up_pointing_camera</name>
  <version>0.0.1</version>
  <description>The up_pointing_camera package</description>


  <maintainer email="alexandre.bienfait@hotmail.com">alex</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
